name:                fynder-test
version:             0.0.0.1
synopsis:            Fynder tests and sample data support
license:             OtherLicense
license-file:        LICENSE
author:              Renzo Carbonara
maintainer:          renzo@dlstartup.com
category:            Test
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src/lib
  default-language:    Haskell2010
  ghc-options: -Wall -Werror
  exposed-modules:
      Fynder.Test.Data
  build-depends:
      base (>=4.6 && <4.7)
    , aeson (>=0.7 && <0.8 )
    , fynder
    , QuickCheck (>=2.6 && <2.7)
    , quickcheck-instances (>=0.3.3 && <0.4)

test-suite tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  ghc-options:      -Wall -Werror
  build-depends:
      base (>=4.6 && <4.7)
    , bytestring (>=0.9.2.1)
    , cereal (>=0.4 && <0.5)
    , configurator (>=0.2 && <0.3)
    , containers (>=0.5 && <0.6)
    , email-validate (>=2.0 && <2.1)
    , free (>=4.1 && <4.7)
    , fynder
    , fynder-test
    , HUnit (>=1.2.5.2)
    , lens (>=4.0 && <4.2)
    , old-locale (>=1.0 && <1.1)
    , pipes (>=4.1 && <4.2)
    , postgresql-simple (>=0.3.9 && <0.5)
    , process (>=1.1.0.2 && <1.2)
    , QuickCheck (>=2.6 && <2.7)
    , quickcheck-instances (>=0.3.3 && <0.4)
    , safecopy (>=0.8.2 && <0.9)
    , semigroups (>=0.11 && <0.14 )
    , system-filepath (>=0.4 && <0.5)
    , tasty (>=0.8.0.2 && <0.9)
    , tasty-ant-xml (>=1.0.0 && <1.1)
    , tasty-hunit (>=0.8 && <0.9)
    , tasty-quickcheck (>=0.8 && <0.9)
    , text (>=0.11.3.1 && <0.12)
    , time (>=1.4 && <1.5)
    , timezone-series (>=0.1.2 && <0.2)
    , transformers (>=0.3 && <0.4)
    , uuid (>=1.3 && <1.4)
    , vector (>=0.9.1)
