name:                fynder-test
version:             0.0.0.1
synopsis:            Fynder tests and sample data support
license:             OtherLicense
license-file:        LICENSE
author:              Renzo Carbonara
maintainer:          renzo@dlstartup.com
category:            Test
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src/lib
  default-language:    Haskell2010
  ghc-options: -Wall
  exposed-modules:
      Fynder.Test.Fixture
      Fynder.Test.QuickCheck
  build-depends:
      base (>=4.6 && <4.7)
    , aeson (>=0.7 && <0.8 )
    , free (>=4.1 && <4.7)
    , fynder
    , lens (>=4.0 && <4.2)
    , QuickCheck (>=2.6 && <2.7)
    , quickcheck-instances (>=0.3.3 && <0.4)
    , email-validate (>=2.0 && <2.1)
    , text (>=0.11.3.1 && <0.12)
    , semigroups (>=0.11 && <0.14 )
    , bytestring (>=0.9.2.1)
    , time (>=1.4 && <1.5)
    , vector (>=0.9.1)
