name:                fynder-test
version:             0.0.0.1
synopsis:            Fynder tests and sample data support
license:             OtherLicense
license-file:        LICENSE
author:              Renzo Carbonara
maintainer:          renzo@dlstartup.com
category:            Test
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src/lib
  default-language:    Haskell2010
  ghc-options: -Wall
  exposed-modules:
      Fynder.Test.Fixture
      Fynder.Test.QuickCheck
  build-depends:
      base (>=4.6 && <4.7)
    , aeson (>=0.7 && <0.8 )
    , free (>=4.1 && <4.7)
    , fynder
    , lens (>=4.0 && <4.2)
    , QuickCheck (>=2.6 && <2.7)
    , quickcheck-instances (>=0.3.3 && <0.4)
    , email-validate (>=2.0 && <2.1)
    , text (>=0.11.3.1 && <0.12)
    , semigroups (>=0.11 && <0.14 )
    , bytestring (>=0.9.2.1)
    , time (>=1.4 && <1.5)
    , vector (>=0.9.1)

executable fynder-load-fixtures
  hs-source-dirs:      src/load-fixtures
  main-is:             load-fixtures.hs
  default-language:    Haskell2010
  ghc-options: -Wall -threaded
  build-depends:
      base (>= 4.5 && < 4.7 )
    , configurator (>= 0.2 && < 0.3 )
    , email-validate (>= 2.0 && < 2.1 )
    , free (>= 4.1 && < 4.7 )
    , fynder
    , ghc-prim (>= 0.2 )
    , hashable (>= 1.1 && < 1.3 )
    , lens (>= 4.0 && < 4.2 )
    , mmorph (>= 1.0 && < 1.1 )
    , mtl (>= 2.1 && < 2.2 )
    , old-locale (>= 1.0 && < 1.1 )
    , optparse-applicative (>= 0.7 && < 0.9 )
    , postgresql-simple (>= 0.3.9 && < 0.5 )
    , time (>= 1.4 && < 1.5 )
    , text (>= 0.11.3.1 && < 0.12 )
    , transformers (>= 0.3 && < 0.4 )
    , void (>= 0.6 && < 0.7 )
    , fynder-test